vlib/v/parser/tests/for_val_in_array_err.vv
type TokenValue = rune | u64

fn main() {
	val := `+`
	for val in [TokenValue(`+`), TokenValue(`-`)] {
		println("ok")
		break
	}
}
